--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "docker, solr and node",
   "author": "Death of all hope",
   "dependencies": {
-    "express": "3.4.8"
+    "express": "3.4.8",
+    "solr-client": "0.2.9"
   }
 }
