--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Death of all hope",
   "dependencies": {
     "express": "3.4.8",
+    "expect.js": "0.3.1",
     "solr-client": "0.2.9",
     "easyimage": "0.1.6"
   }
