--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "3.4.8",
     "expect.js": "0.3.1",
     "solr-client": "0.2.9",
-    "easyimage": "0.1.6"
+    "easyimage": "0.1.6",
+    "node-uuid": "1.4.1"
   }
 }
