--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "expect.js": "0.3.1",
     "solr-client": "0.2.9",
     "easyimage": "0.1.6",
-    "node-uuid": "1.4.1"
+    "node-uuid": "1.4.1",
+    "MD5": "1.2.0"
   }
 }
